# FiaOS

./: .gitignore  MANIFEST.in  README.md  executor.py  fia_ptt.py  fia_talk.py  launch_server.sh  nginx-fia.conf  pyproject.toml  sample_voices.py  server.py  start.sh  start_personaplex.sh  tunnel_to_vps.sh  watchdog.sh
examples/: com.fiaos.server.plist
static/: audio-processor.js  index.html  login.html
